--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,25 @@
 {
-    "name": "wayang/stdlib",
-    "description": "The Wayang Stdlib",
-    "type": "library",
-    "license": "Apache-2.0",
-    "require": {
-    	"php": "^7.1.3"
-    },
-    "autoload": {
-        "psr-4": {
-            "Wayang\\Stdlib\\": "src/Wayang/Stdlib/"
-        }
+  "name": "wayang/stdlib",
+  "description": "The Wayang Stdlib",
+  "type": "library",
+  "license": "Apache-2.0",
+  "require": {
+    "php": ">=7.2.5"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^8.5|^9.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "Wayang\\Stdlib\\": "src/"
     }
+  },
+  "scripts": {
+    "test": "phpunit -c test/phpunit.config.xml",
+    "coverage": "phpunit --coverage-text --coverage-clover=build/coverage/coverage-clover.xml -c test/phpunit.config.xml"
+  },
+  "config": {
+    "sort-packages": true,
+    "optimize-autoloader": true
+  }
 }
